--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://thelaurence.com"
+baseURL = "http://thelaurence.com/"
 languageCode = "en-us"
 title = "laurence's website"
 author = "Laurence Glazier"
